--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">PrintNet</string>
+    <string name="app_name">Kemon Learning</string>
     <string name="action_settings">Settings</string>
+    <string name="server_error">Server Mengalamai Gangguan</string>
+    <string name="no_connection">Tidak ada jaringan internet</string>
 </resources>
